# baxter_tools

./: CHANGELOG.rst  CMakeLists.txt  README.md  README.rst  package.xml
scripts/: calibrate_arm.py  camera_control.py  enable_robot.py  smoke_test.py  tare.py  tuck_arms.py  update_robot.py
src/baxter_tools/: __init__.py  smoketests.py
